[tool.poetry]
name = "repl_pygame_Connect-4-with-AI"
version = "1.0.0"
description = "A two player board game"
authors = ["Bhargava Kanakapura bhargavakanakapura@sfhs.com"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
